# arqmacore

./: CMakeLists.txt  README.md  main.cpp
cmake/: FindArqma.cmake  MyUtils.cmake
src/: Account.h  CMakeLists.txt  MicroCore.cpp  MicroCore.h  UniversalIdentifier.cpp  UniversalIdentifier.hpp  arqma_headers.h  tools.cpp  tools.h
